# fast_zero_2025

./: README.md  pyproject.toml
src/: app.py
tests/: conftest.py  test_app.py
