[project]
name = "fast-zero-2025"
version = "0.1.0"
description = ""
authors = [
    {name = "SouzaPatrick",email = "souza.felipe.patrick@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)"
]
[tool.poetry.group.dev.dependencies]
ruff = "^0.11.11"
taskipy = "^1.14.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[tool.poetry]
packages = [{include = "fast_zero_2025", from = "src"}]

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"

[tool.ruff]
line-length = 79
extend-exclude = ["migrations"]

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT"]

[tool.ruff.format]
preview = true
quote-style = "double"

[tool.taskipy.tasks]
run = "fastapi dev src/app.py"
pre_test = "task lint"
test = "pytest --cov=src -vv"
post_test = "coverage html"
open_coverage = "coverage html && wslview /home/felipe/dev/fast_zero_2025/htmlcov/index.html"
lint = "ruff check . && ruff check . --diff"
format = "ruff check . --fix && ruff format ."


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
